docs/c_grammar
<program> ::= { <declaration> }
<declaration> ::= <variable-declaration> | <function-declaration>
<variable-declaration> ::= { <specifier> }+ <identifier> [ "=" <exp> ] ";"
<function-declaration> ::= { <specifier> }+ <identifier> "(" <param-list> ")" ( <block> | ";" )
<param-list> ::= "void"
               | { <type-specifier> }+ <identifier> { "," { <type-specifier> }+ <identifier> }
<type-specifier> :: = "int" | "long"
<specifier> ::=  <type-specifier> | "static" | "extern"
<block> ::= "{" { <block-item> } "}"
<block-item> ::= <statement> | <declaration>
<for-init> ::= <variable-declaration> | [ <exp> ] ";"
<statement> ::= "return" <exp> ";"
              | <exp> ";"
              | "if" "(" <exp> ")" <statement> [ "else" <statement> ]
              | <block>
              | "break" ";"
              | "continue" ";"
              | "while" "(" <exp> ")" <statement>
              | "do" <statement> "while" "(" <exp> ")" ";"
              | "for" "(" <for-init> [ <exp> ] ";" [ <exp> ] ")" <statement>
              | ";"
<exp> ::= <factor> | <exp> <binop> <exp> | <exp> "?" <exp> ":" <exp>
<factor> ::= <constant> | <identifier>
           | "(" { <type-specifier> }+ ")" <factor>
           | <unop> <factor> | <factor> <unop> | "(" <expr> ")"
           | <identifier> "(" [ <argument-list> ] ")"
<argument-list> ::= <exp> { "," <exp> }
<unop> ::= "-" | "~" | "!" | "++" | "--"
<binop> ::= "-" | "+" | "*" | "/" | "%"
          | "&" | "|" | "^" | "<<" | ">>" | "&&" | "||"
          | "==" | "!=" | "<" | "<=" | ">" | ">="
          | "=" | "+=" | "-=" | "*=" | "/=" | "%="
          | "&=" | "|=" | "^=" | "<<=" | ">>="
<constant ::= <int> | <long>
<identifier> ::= ? An identifier token ?
<int> ::= ? A constant int token ?
<long> ::= ? A constant int or constant long token ?
